--- a/inicio/templates/inicio/recepcionCaja.html
+++ b/inicio/templates/inicio/recepcionCaja.html
@@ -47,28 +47,32 @@
 
           <form class="" action="" method="post" enctype="multipart/form-data">{% csrf_token %}
             <div class="select input-field col s12 m12 l12">
-              <label for="">Productor:</label>
-              {{form.Productor}}
-            </div>
-            <div class="select input-field col s12 m12 l12">
-              <label for="">Calidad Aproximada:</label>
-              {{form.calidad_aprox}}
-            </div>
-            <div class="select input-field col s12 m12 l12">
-              <label for="">Firma:</label>
-              {{form.firma}}
-            </div>
-            <div class="select input-field col s12 m12 l12">
-              <label for="">Status:</label>
-              {{form.status}}
+              <label for="">Peso Neto:</label>
+              {{form.peso_neto}}
             </div>
             <div class="text input-field col s12 m12 l12">
-              <label for="">Representante:</label>
-              {{form.representante}}
+              <label for="">Color:</label>
+              {{form.color}}
+            </div>
+            <div class="text input-field col s12 m12 l12">
+              <label for="">Cantidad:</label>
+              {{form.cantidad}}
             </div>
             <div class="select input-field col s12 m12 l12">
-              <label for="">Empleado:</label>
-              {{form.Empleado}}
+              <label for="">Tamaño:</label>
+              {{form.tamanio}}
+            </div>
+            <div class="text input-field col s12 m12 l12">
+              <label for="">Alto:</label>
+              {{form.alto}}
+            </div>
+            <div class="text input-field col s12 m12 l12">
+              <label for="">Ancho:</label>
+              {{form.ancho}}
+            </div>
+            <div class="text input-field col s12 m12 l12">
+              <label for="">Largo:</label>
+              {{form.largo}}
             </div>
             <button class="btn waves-effect waves-light" type="submit" method="post" value="Enviar">Enviar</button>
           </form>
@@ -84,6 +88,11 @@
     <script type="text/javascript">
       $(document).ready(function() {
         $('select').material_select();
+
+        $("#view").click(function() {
+              // do your stuff what you need.
+              $('form').submit();
+        });
       });
     </script>
   </body>
