--- a/inicio/templates/inicio/login.html
+++ b/inicio/templates/inicio/login.html
@@ -36,7 +36,7 @@
 		          <i class="material-icons prefix" style="color:#8f8f8f;">lock</i>
 		          {{form.password}}
 		        </div>
-						<button class="btn waves-effect waves-light" type="submit" method="post">Enviar</button>
+						<button class="btn waves-effect waves-light" type="submit" method="post">Entrar</button>
 
 				</form>
 
