--- a/inicio/templates/inicio/recepcion.html
+++ b/inicio/templates/inicio/recepcion.html
@@ -42,33 +42,31 @@
 
 
   		<div class="row center">
-
-  			<div class="col l8 m12 s12 offset-l2 ">
+        <div class="col l10 m12 s12 offset-l1 left-align">
+          <h1 class="titRec">Recepción<span>/limón</span></h1>
+        </div>
+  			<div class="col l10 m12 s12 offset-l1 ">
 
           <form class="" action="" method="post" enctype="multipart/form-data">{% csrf_token %}
-            <div class="select input-field col s12 m12 l12">
+            <div class="select input-field col s12 m6 l6">
               <label for="">Productor:</label>
               {{form.Productor}}
             </div>
-            <div class="select input-field col s12 m12 l12">
+            <div class="select input-field col s12 m6 l6">
               <label for="">Calidad Aproximada:</label>
               {{form.calidad_aprox}}
             </div>
-            <div class="select input-field col s12 m12 l12">
+            <div class="select truncate input-field col s12 m6 l6">
               <label for="">Firma:</label>
               {{form.firma}}
             </div>
-            <div class="select input-field col s12 m12 l12">
+            <div class="select input-field col s12 m6 l6">
               <label for="">Status:</label>
               {{form.status}}
             </div>
             <div class="text input-field col s12 m12 l12">
               <label for="">Representante:</label>
               {{form.representante}}
-            </div>
-            <div class="select input-field col s12 m12 l12">
-              <label for="">Empleado:</label>
-              {{form.Empleado}}
             </div>
             <button class="btn waves-effect waves-light" type="submit" method="post" value="Enviar">Enviar</button>
           </form>
