--- a/inicio/templates/inicio/recepcionCaja.html
+++ b/inicio/templates/inicio/recepcionCaja.html
@@ -42,51 +42,85 @@
 
 
   		<div class="row center">
-
-  			<div class="col l8 m12 s12 offset-l2 ">
+        <div class="col l10 m12 s12 offset-l1 left-align">
+          <h1 class="titRec">Recepción<span>/limón</span></h1>
+        </div>
+  			<div class="col l10 m12 s12 offset-l1 ">
 
           <form id="caja" action="" method="post" enctype="multipart/form-data">{% csrf_token %}
             <input type="hidden" name="recepcion" value={{recepcion}}>
-            <div class="select input-field col s12 m12 l12">
-              <label for="">Peso Neto:</label>
-              {{form.peso_neto}}
+            <div class="divider"></div>
+            <div class="section">
+              <h5>Nueva Caja:</h5>
+
+              <div class="select input-field col s12 m12 l12">
+                <label for="">Peso Neto:</label>
+                {{form.peso_neto}}
+              </div>
+              <div class="text input-field col s12 m12 l12">
+                <label for="">Color:</label>
+                {{form.color}}
+              </div>
+              <div class="text input-field col s12 m12 l12">
+                <label for="">Cantidad:</label>
+                {{form.cantidad}}
+              </div>
+              <div class="select input-field col s12 m12 l12">
+                <label for="">Tamaño:</label>
+                {{form.tamanio}}
+              </div>
+              <div class="text input-field col s12 m12 l12">
+                <label for="">Alto:</label>
+                {{form.alto}}
+              </div>
+              <div class="text input-field col s12 m12 l12">
+                <label for="">Ancho:</label>
+                {{form.ancho}}
+              </div>
+              <div class="text input-field col s12 m12 l12">
+                <label for="">Largo:</label>
+                {{form.largo}}
+              </div>
+
             </div>
-            <div class="text input-field col s12 m12 l12">
-              <label for="">Color:</label>
-              {{form.color}}
+
+            <div class="col s12 m12 l6">
+              <div class="divider"></div>
+              <div class="section">
+                <h5>Prueba 1</h5>
+                <div class="text input-field col s12 m12 l12">
+                  <label for="">Kilogramos:</label>
+                  <input type="number" required name="kilogramos" id="kilogramos" value="" step="0.001">
+                </div>
+              </div>
+
+              <div class="divider"></div>
+              <div class="section">
+                <h5>Prueba 2</h5>
+                <div class="text input-field col s12 m12 l12">
+                  <label for="">Kilogramos:</label>
+                  <input type="number" required name="kilogramos1" id="kilogramos1" value="" step="0.001">
+                </div>
+              </div>
+
+              <div class="divider"></div>
+              <div class="section">
+                <h5>Prueba 3</h5>
+                <div class="text input-field col s12 m12 l12">
+                  <label for="">Kilogramos:</label>
+                  <input type="number" required name="kilogramos2" id="kilogramos2" value="" step="0.001">
+                </div>
+              </div>
             </div>
-            <div class="text input-field col s12 m12 l12">
-              <label for="">Cantidad:</label>
-              {{form.cantidad}}
+
+            <div class="col s12 m12 l6">
+              <div class="divider"></div>
+              <div class="section">
+                <h5>Peso Neto</h5>
+                <h3 class="totPeso" id="pesoTotal">---</h3>
+              </div>
             </div>
-            <div class="select input-field col s12 m12 l12">
-              <label for="">Tamaño:</label>
-              {{form.tamanio}}
-            </div>
-            <div class="text input-field col s12 m12 l12">
-              <label for="">Alto:</label>
-              {{form.alto}}
-            </div>
-            <div class="text input-field col s12 m12 l12">
-              <label for="">Ancho:</label>
-              {{form.ancho}}
-            </div>
-            <div class="text input-field col s12 m12 l12">
-              <label for="">Largo:</label>
-              {{form.largo}}
-            </div>
-            <div class="text input-field col s12 m12 l12">
-              <label for="">Kilogramos:</label>
-              {{form1.kilogramos}}
-            </div>
-            <div class="text input-field col s12 m12 l12">
-              <label for="">Kilogramos:</label>
-              {{form2.kilogramos}}
-            </div>
-            <div class="text input-field col s12 m12 l12">
-              <label for="">Kilogramos:</label>
-              {{form3.kilogramos}}
-            </div>
+
             <button class="btn waves-effect waves-light" type="submit" value="Enviar">Enviar y Finalizar</button>
             <button class="btn waves-effect waves-light" id="enviarCont" value="Enviar">Enviar y agregar caja</button>
           </form>
@@ -101,15 +135,31 @@
       $(document).ready(function() {
         $('select').material_select();
 
-        $("#view").click(function() {
-              // do your stuff what you need.
-              $('form').submit();
+        $(document).on('submit','form',function(){
+          $('#caja').append("<input type=\"hidden\" name=\"sigue\" value=\"True\">")
         });
 
-        $("#enviarCont").click(function() {
-            $('#caja').append("<input type=\"hidden\" name=\"sigue\" value=\"True\">")
-            $('#caja').submit();
+        $("input[name='kilogramos']").change(function(ev) {
+          var prom = (Number(ev.target.value)+Number($("input[name='kilogramos1']").val())+Number($("input[name='kilogramos2']").val()))/3
+          var total = Number($("input[name='cantidad']").val())*prom
+          $("#pesoTotal").contents()[0].data=total.toFixed(2)
         })
+
+        $("input[name='kilogramos1']").change(function(ev) {
+          var prom = (Number(ev.target.value)+Number($("input[name='kilogramos']").val())+Number($("input[name='kilogramos2']").val()))/3
+          var total = Number($("input[name='cantidad']").val())*prom
+          $("#pesoTotal").contents()[0].data=total.toFixed(2)
+        })
+
+        $("input[name='kilogramos2']").change(function(ev) {
+          var prom = (Number(ev.target.value)+Number($("input[name='kilogramos']").val())+Number($("input[name='kilogramos1']").val()))/3
+          var total = Number($("input[name='cantidad']").val())*prom
+          $("#pesoTotal").contents()[0].data=total.toFixed(2)
+        })
+        /*$("#enviarCont").click(function() {
+
+            $('#caja').submit();
+        })*/
       });
     </script>
   </body>
