--- a/inicio/templates/inicio/recepcionCaja.html
+++ b/inicio/templates/inicio/recepcionCaja.html
@@ -20,7 +20,7 @@
       <div class="nav-wrapper grey lighten-2">
 
         <div class="left grey-text text-darken-4 tipoUs">
-          <a href="#" class="grey-text text-darken-4">Logo</a>
+          <a href="{% url 'index' %}" class="grey-text text-darken-4">Logo</a>
           <div class="linea"></div>
           {% if admin %}
           <p>Administrador</p>
@@ -122,7 +122,7 @@
             </div>
 
             <button class="btn waves-effect waves-light" type="submit" value="Enviar">Enviar y Finalizar</button>
-            <button class="btn waves-effect waves-light" id="enviarCont" value="Enviar">Enviar y agregar caja</button>
+            <button class="btn waves-effect waves-light" type="submit" id="enviarCont" value="EnviarCont">Enviar y agregar caja</button>
           </form>
 
   			</div>
@@ -134,9 +134,16 @@
     <script type="text/javascript">
       $(document).ready(function() {
         $('select').material_select();
-
-        $(document).on('submit','form',function(){
+        $("#enviarCont").click(function(ev) {
           $('#caja').append("<input type=\"hidden\" name=\"sigue\" value=\"True\">")
+        })
+        $(document).on('submit','form',function(ev){
+          console.log(ev);
+          alert("pruieba")
+          if(ev.val()=="EnviarCont"){
+            alert("Bien")
+            $('#caja').append("<input type=\"hidden\" name=\"sigue\" value=\"True\">")
+          }
         });
 
         $("input[name='kilogramos']").change(function(ev) {
