--- a/inicio/templates/inicio/login.html
+++ b/inicio/templates/inicio/login.html
@@ -51,6 +51,6 @@
 
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="js/materialize.min.js"></script>
+	<script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
 </body>
 </html>
