--- a/inicio/templates/inicio/recepcionCaja.html
+++ b/inicio/templates/inicio/recepcionCaja.html
@@ -20,7 +20,7 @@
       <div class="nav-wrapper grey lighten-2">
 
         <div class="left grey-text text-darken-4 tipoUs">
-          <a href="{% url 'index' %}" class="grey-text text-darken-4">Logo</a>
+          <a href="{% url 'index' %}" class="logo"><img src="{% static "images/short-icon.png"%}" alt=""></a>
           <div class="linea"></div>
           {% if admin %}
           <p>Administrador</p>
