--- a/inicio/static/css/styles.css
+++ b/inicio/static/css/styles.css
@@ -11,6 +11,15 @@ input:not([type]), input[type=text]:not(.browser-default), input[type=password]:
 body{
   background-color: #f9f9f9;
 }
+.logo{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.logo>img{
+  height: 45px;
+  width:45px;
+}
 /*Empiezan estilos recepcion.html*/
 .centro{
   min-height: 100vh;
