--- a/inicio/templates/inicio/inicio.html
+++ b/inicio/templates/inicio/inicio.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Recepción</title>
+    <title>Easy Agro</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
@@ -20,7 +20,7 @@
       <div class="nav-wrapper grey lighten-2">
 
         <div class="left grey-text text-darken-4 tipoUs">
-          <a href="{% url 'index' %}" class="grey-text text-darken-4">Logo</a>
+          <a href="{% url 'index' %}" class="logo"><img src="{% static "images/short-icon.png"%}" alt=""></a>
           <div class="linea"></div>
           {% if admin %}
           <p>Administrador</p>
@@ -56,20 +56,18 @@
 
           {% else %}
           <a class="waves-effect waves-light btn btn-accion" href="{% url 'nuevaRecepcion' %}"><i class="material-icons">assignment</i>Realizar Recepcion</a>
-          <a class="waves-effect waves-light btn btn-accion light-green darken-1"><i class="material-icons">list</i>Ver mis recepciones</a>
+          <a class="waves-effect waves-light btn btn-accion light-green darken-1" href="{% url 'listaRecepcion' %}"><i class="material-icons">list</i>Ver mis recepciones</a>
           <a class="waves-effect waves-light btn btn-accion pink darken-1" href="{% url 'nuevaCorrida' %}"><i class="material-icons">assignment_turned_in</i>Realizar Corrida</a>
           {% endif %}
 
         </div>
 
         <div class="col m12 s12 l8 offset-l2 pendientes">
-
-          <h6>Pendientes hoy:</h6>
-
-          <ul>
-            <li><div class="col m12 s12 l12 offset-l2" style="background-color:#e4e4e4; height:20px; margin:10px 0;"></div></li>
-            <li><div class="col m12 s12 l12 offset-l2" style="background-color:#e4e4e4; height:20px; margin:10px 0;"></div></li>
-            <li><div class="col m12 s12 l12 offset-l2" style="background-color:#e4e4e4; height:20px; margin:10px 0;"></div></li>
+          <ul class="collection with-header">
+            <li class="collection-header">Pendientes hoy:</h4></li>
+            {%for recepcion in pc%}
+                <li class="collection-item"><div>{{recepcion}}<a href="{% url 'modRecepcion' recepcion.IDProductoCampo %}" class="secondary-content"><i class="material-icons">send</i></a></div></li>          
+            {%endfor%}
           </ul>
 
         </div>
