--- a/inicio/templates/inicio/recepcionMod.html
+++ b/inicio/templates/inicio/recepcionMod.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Corrida</title>
+    <title>Recepción</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
@@ -43,53 +43,30 @@
 
   		<div class="row center">
         <div class="col l10 m12 s12 offset-l1 left-align">
-          <h1 class="titRec">Corrida<span>/limón</span></h1>
+          <h1 class="titRec">Recepción<span>/limón</span></h1>
         </div>
-
   			<div class="col l10 m12 s12 offset-l1 ">
-          <form class="" id="filtro" method="post">{% csrf_token %}
-
+          <form class="" action="" method="post" enctype="multipart/form-data">{% csrf_token %}
             <div class="select input-field col s12 m6 l6">
-              <label for="">Localidad:</label>
-              {{form1.localidad}}
-            </div>
-
-            <div class="select input-field col s12 m6 l6">
-              <label for="">Municipio:</label>
-              {{form1.municipio}}
-            </div>
-
-          </form>
-          <form class="" action="" id="corrida" method="post" enctype="multipart/form-data">{% csrf_token %}
-            <div class="select input-field col s12 m6 l6">
-              <label for="">Recepcion:</label>
-              {{form.ProductoCampo}}
-            </div>
-            <div class="text input-field col s12 m6 l6">
-              <label for="">Calibre:</label>
-              {{form.calibre}}
-            </div>
-            <div class="text input-field col s12 m6 l6">
-              <label for="">Kilogramos:</label>
-              {{form.kilogramos}}
+              <label for="">Productor:</label>
+              {{form.Productor}}
             </div>
             <div class="select input-field col s12 m6 l6">
-              <label for="">Producto:</label>
-              {{form.Producto}}
+              <label for="">Calidad Aproximada:</label>
+              {{form.calidad_aprox}}
             </div>
-            <div class="text input-field col s12 m12 l12">
-              <label for="">Fecha Compra:</label>
-              {{form.fecha_compra}}
-            </div>
-            <div class="text input-field col s12 m12 l12">
-              <label for="">Folio:</label>
-              {{form.folio}}
+            <div class="select truncate input-field col s12 m6 l6">
+              <label for="">Firma:</label>
+              {{form.firma}}
             </div>
             <div class="select input-field col s12 m6 l6">
               <label for="">Status:</label>
               {{form.status}}
             </div>
-
+            <div class="text input-field col s12 m12 l12">
+              <label for="">Representante:</label>
+              {{form.representante}}
+            </div>
             <button class="btn waves-effect waves-light" type="submit" method="post" value="Enviar">Guardar y continuar</button>
           </form>
 
@@ -105,21 +82,6 @@
       $(document).ready(function() {
         $('select').material_select();
       });
-      $(document).on('submit','form',function() {
-        $("#id_fecha_compra").val($("input[name='fecha_compra_submit']").val())
-      })
-      $('.datepicker').pickadate({
-        selectMonths: true, // Creates a dropdown to control month
-        selectYears: 15, // Creates a dropdown of 15 years to control year,
-        monthsFull: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
-        weekdaysShort: ['Dom', 'Lun', 'Mar', 'Mer', 'Jue', 'Vier', 'Sab'],
-        formatSubmit: 'yyyy-mm-dd',
-        today: 'Today',
-        clear: 'Clear',
-        close: 'Ok',
-        closeOnSelect: false // Close upon selecting a date,
-      });
-
       $("#loc").change(function() {
         $("#filtro").submit();
       })
